Fix: wrong positioning and feat: wrapper to player 1 and computers boards for making boards more visible.

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -85,11 +85,6 @@
   transition: inherit;
 }
 
-html, body {
-  height: 100%;
-  width: 100%;
-}
-
 body {
   display: flex;
   flex-direction: column;
@@ -110,7 +105,7 @@ body::before{
   height: 100%;
   z-index: -1;
   background-image: url('./background-image.jpg');
-  background-size:cover;
+  background-size:auto;
   background-repeat: no-repeat;
   filter: blur(4px) brightness(.7) saturate(2) contrast(1.2);
   box-shadow: inset 0 0 100px 50px rgba(0,0,0,0.7);
@@ -160,7 +155,7 @@ main {
   justify-items: center;
   width: calc(2*(10*var(--grid-size) + var(--grid-gap)*9) + 150px);
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr 70px;
+  grid-template-rows: 1fr 50px;
   grid-gap: 4rem;
 }
 
@@ -178,6 +173,14 @@ main {
 }
 
 /* Boards */
+
+.player-wrapper{
+  padding: 0.5rem;
+  margin: 0.2rem;
+  border-radius: 2rem;
+  backdrop-filter: blur(15px) brightness(2);
+}
+
 .gameboard {
   display: grid;
   justify-content: center;
@@ -191,6 +194,7 @@ main {
 
 #player2-gameboard{
   cursor: crosshair;
+  margin-bottom: 2rem;
 }
 
 /* Grids */
@@ -365,8 +369,6 @@ main {
   
     --grid-border-radius: 2px;
   }
-
-  html
 
   body{font-size: 12px;}
 }
